--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -14,7 +14,7 @@
     <aside class="menu-sidebar d-none d-lg-block">
         <div class="logo">
             <a href="#">
-                <img data-th-src="${'img/1.PNG'}" class="image" alt="Sanchana" />
+                <img data-th-src="${'img/logo.PNG'}" class="image" alt="Sanchana" />
             </a>
         </div>
         <div class="menu-sidebar__content js-scrollbar1">
@@ -213,6 +213,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </header>
         <!-- HEADER DESKTOP-->
 
