--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,20 +1,50 @@
 
-.btn {
-    text-transform: capitalize;
-    border-radius: .15rem;
-    width: 200px;
-    height: 40px;
-    padding: .150rem .75rem;
-    margin-top: 300px;
-    margin-left: 500px;
-    background: transparent;
-
-    font-family: 'PT Sans', sans-serif;
-    color: black;
-
-    letter-spacing: 2px;
+#loginBack {
+    overflow: hidden;
+    background-size: auto;
 
 }
+
+.container img {
+    width: 100%;
+    height: auto;
+
+}
+
+.container .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.container .btn:hover {
+    background-color: black;
+}
+
+.btn {
+     text-transform: capitalize;
+     border-radius: .15rem;
+     width: 200px;
+     height: 40px;
+     padding: .150rem .75rem;
+     background: transparent;
+
+     font-family: 'PT Sans', sans-serif;
+     color: black;
+
+     letter-spacing: 2px;
+
+ }
 
 
 .btn-primary {
