--- a/src/main/resources/static/css/theme.css
+++ b/src/main/resources/static/css/theme.css
@@ -52,6 +52,10 @@ ul {
     margin: 0;
 }
 
+/*div{*/
+/*    border-style: dotted;*/
+/*}*/
+
 button,
 input[type='button'] {
     cursor: pointer;
@@ -91,11 +95,11 @@ p {
     border-radius: 3px;
 }
 
-.btn {
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
+/*.btn {*/
+/*    -webkit-border-radius: 3px;*/
+/*    -moz-border-radius: 3px;*/
+/*    border-radius: 3px;*/
+/*}*/
 
 /* ----- Typography ----- */
 body {
@@ -108,49 +112,49 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: #333333;
-    font-weight: 700;
-    margin: 0;
-    line-height: 1.2;
-}
+/*h1,*/
+/*h2,*/
+/*h3,*/
+/*h4,*/
+/*h5,*/
+/*h6 {*/
+/*    color: #333333;*/
+/*    font-weight: 700;*/
+/*    margin: 0;*/
+/*    line-height: 1.2;*/
+/*}*/
 
-h1 {
-    font-size: 36px;
-}
+/*h1 {*/
+/*    font-size: 36px;*/
+/*}*/
 
-h2 {
-    font-size: 30px;
-}
+/*h2 {*/
+/*    font-size: 30px;*/
+/*}*/
 
-h3 {
-    font-size: 24px;
-}
+/*h3 {*/
+/*    font-size: 24px;*/
+/*}*/
 
-h4 {
-    font-size: 18px;
-}
+/*h4 {*/
+/*    font-size: 18px;*/
+/*}*/
 
-h5 {
-    font-size: 15px;
-}
+/*h5 {*/
+/*    font-size: 15px;*/
+/*}*/
 
-h6 {
-    font-size: 13px;
-}
+/*h6 {*/
+/*    font-size: 13px;*/
+/*}*/
 
-blockquote {
-    margin: 0;
-}
+/*blockquote {*/
+/*    margin: 0;*/
+/*}*/
 
-strong {
-    font-weight: 700;
-}
+/*strong {*/
+/*    font-weight: 700;*/
+/*}*/
 
 /*-----------------------------------------------------*/
 /*                   ELEMENTS                          */
@@ -446,20 +450,20 @@ section {
 /*                   COMPONENTS                        */
 /*-----------------------------------------------------*/
 /* ----- Buttons----- */
-.au-btn {
-    line-height: 45px;
-    padding: 0 35px;
-    text-transform: uppercase;
-    color: #fff;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    cursor: pointer;
-}
+/*.au-btn {*/
+/*    line-height: 45px;*/
+/*    padding: 0 35px;*/
+/*    text-transform: uppercase;*/
+/*    color: #fff;*/
+/*    -webkit-border-radius: 3px;*/
+/*    -moz-border-radius: 3px;*/
+/*    border-radius: 3px;*/
+/*    -webkit-transition: all 0.3s ease;*/
+/*    -o-transition: all 0.3s ease;*/
+/*    -moz-transition: all 0.3s ease;*/
+/*    transition: all 0.3s ease;*/
+/*    cursor: pointer;*/
+/*}*/
 
 .au-btn:hover {
     color: #fff;
@@ -2589,7 +2593,7 @@ section {
 }
 
 .header-desktop3 {
-    background: #393939;
+    background: #4D243D;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -2600,7 +2604,7 @@ section {
     -moz-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    height: 76px;
+    height: 100px;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -2659,18 +2663,48 @@ section {
 }
 
 .header__logo {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -moz-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    position: relative;
-    z-index: 3;
+
+    /*background: #f5f5f5;*/
+    /*height: 100px;*/
+    /*width: 300px;*/
+    /*padding: 0px 0px;*/
+    /*display: -webkit-box;*/
+    /*display: -webkit-flex;*/
+    /*display: -moz-box;*/
+    /*display: -ms-flexbox;*/
+    /*display: flex;*/
+    /*-webkit-box-align: center;*/
+    /*-webkit-align-items: center;*/
+    /*-moz-box-align: center;*/
+    /*-ms-flex-align: center;*/
+    /*align-items: center;*/
+    /*-webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);*/
+    /*-moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);*/
+    /*box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);*/
+    /*border-right: 1px solid #e5e5e5;*/
+    /*position: relative;*/
+    /*z-index: 3;*/
+    /*display: -webkit-box;*/
+    /*display: -webkit-flex;*/
+    /*display: -moz-box;*/
+    /*display: -ms-flexbox;*/
+    /*display: flex;*/
+    /*-webkit-box-align: center;*/
+    /*-webkit-align-items: center;*/
+    /*-moz-box-align: center;*/
+    /*-ms-flex-align: center;*/
+    /*align-items: center;*/
+    /*position: relative;*/
+    /*padding: 0px 0px;*/
+
+
+}
+
+.header__logo .image{
+    width: 300px;
+    height: 100px;
+    /*float: left;*/
+
 }
 
 .header__navbar ul {
@@ -14660,4 +14694,8 @@ section {
 
 .vue-lists ul, .vue-lists ol {
     padding-left: 30px;
+}
+
+#navLogo {
+    margin-left: -11px;
 }
