--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="col">
-            <a href="/employee" class="btn btn-primary">View Employees
+            <a href="/employee" class="btn btn-info">View Employees
             </a>
         </div>
     </div>
@@ -31,12 +31,12 @@
     </div>
 </div>
 <!--details-->
-<div data-th-fragment="employeeDetailsFragment" class="container-fluid  formBorder">
-    <div class="col-sm-12 flex-column ">
+<div data-th-fragment="employeeDetailsFragment" class="container-fluid formBorder">
+    <div class="col-sm-12 flex-column text-dark">
         <div class="row">
             <!--Left Side-->
-            <div class="form-group col-md-6 col-sm-6 text-left flex-column">
-                <div class="form-row text-right">
+            <div class="form-group col-md-6 col-sm-6 flex-column">
+                <div class="form-row text-right ">
                     <div class="col-md-4">
                         <label class="control-label" for="id">ID :</label>
                     </div>
@@ -52,14 +52,7 @@
                         <p id="employeeCode" data-th-text="${employeeDetail.code}" class="display_detail"></p>
                     </div>
                 </div>
-               <!-- <div class="form-row text-right">
-                    <div class="col-md-4">
-                        <label class="control-label" for="departmentIdNumber">Depart Id No :</label>
-                    </div>
-                    <div class="col-md-8">
-                        <p id="departmentIdNumber" data-th-text="${employeeDetail.departmentIdNumber}" class="display_detail"></p>
-                    </div>
-                </div>-->
+
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="name">Name :</label>
@@ -100,15 +93,7 @@
                         <p id="dateOfBirth" data-th-text="${employeeDetail.dateOfBirth}" class="display_detail">Error Birthday</p>
                     </div>
                 </div>
-                <!--<div class="form-row text-right">
-                    <div class="col-md-4">
-                        <label class="control-label" for="bloodGroup">Blood Group :</label>
-                    </div>
-                    <div class="col-md-8">
-                        <p id="bloodGroup" data-th-text="${employeeDetail.bloodGroup.bloodGroup}" class="display_detail">
-                        </p>
-                    </div>
-                </div>-->
+
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="designation">Designation :</label>
@@ -141,7 +126,7 @@
                     <div class="col-md-4">
                         <label class="control-label" for="address">Address :</label>
                     </div>
-                    <div class="col-md-8 text-left">
+                    <div class="col-md-8 text-right">
                         <p id="address" class="display_detail " data-th-utext="${employeeDetail.address}"></p>
                     </div>
                 </div>
@@ -226,140 +211,7 @@
                     </div>
                 </div>
             </div>
-            <!--Current Working Place Details-->
-            <!--<div class="container-fluid bg-dark formBorder">
-                <h3 class="control-label">Current Working Place Details</h3>
-                <div class="col-sm-12 flex-column">
-                    <div class="row">
-                        &lt;!&ndash;Left Side&ndash;&gt;
-                        <div class="form-group col-md-6 col-sm-6 text-left flex-column">
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceName">Name :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceName" data-th-text="${employeeDetail.workingPlace.name}" class="display_detail"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceCode">Code :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceCode" data-th-text="${employeeDetail.workingPlace.code}" class="display_detail"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceProvince">Province :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceProvince" data-th-text="${employeeDetail.workingPlace.province.province}" class="display_detail">
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceWorkingPlaceType">Working
-                                                                                                            Place Type
-                                                                                                            :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceWorkingPlaceType" data-th-text="${employeeDetail.workingPlace.workingPlaceType.workingPlaceType}" class="display_detail">
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceEmailOne">Email One :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceEmailOne" class="display_detail" data-th-text="${employeeDetail.workingPlace.emailOne}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceEmailTwo">Email Two :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceEmailTwo" class="display_detail" data-th-text="${employeeDetail.workingPlace.emailTwo}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceAddress">Address :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceAddress" class="display_detail" data-th-utext="${employeeDetail.workingPlace.address}"></p>
-                                </div>
-                            </div>
-                        </div>
-                        &lt;!&ndash;Right Side&ndash;&gt;
-                      &lt;!&ndash;  <div class="form-group col-md-6 col-sm-6 text-right flex-column">
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceLandOne">Land No One:</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandOne" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landOne}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceLandTwo">Land No Two:</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandTwo" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landTwo}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label " for="employeeWorkingPlaceLandThree">Land No Three
-                                                                                                      :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandThree" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landThree}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceLandFour">Land No Four
-                                                                                                    :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandFour" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landFour}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceFaxNumber">Fax No :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceFaxNumber" class="display_detail land" data-th-text="${employeeDetail.workingPlace.faxNumber}"></p>
-                                </div>
-                            </div>
-                            <div id="createdByDiv" class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceCreatedBy">Created By
-                                                                                                     :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceCreatedBy" class="display_detail" data-th-text="${employeeDetail.workingPlace.createdBy}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right" id="createdAtDiv">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceCreatedAt">Created At
-                                                                                                     :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceCreatedAt" class="display_detail" data-th-text="${#temporals.format(employeeDetail.workingPlace.createdAt, 'dd-MM-yyyy HH:mm')}"></p>
-                                </div>
-                            </div>
-                        </div>&ndash;&gt;
-                    </div>
-                </div>
-            </div>-->
+
             <!--images-->
             <div class="form-group col-md-12 col-sm-12 text-left flex-column ">
                 <div class="col" id="photoDetails">
@@ -390,44 +242,12 @@
                 </div>
             </div>
         </div>
-        <!--Working Place History Details show-->
-        <div class="container-fluid text-center bg-dark formBorder" data-th-if="${not #lists.isEmpty(employeeDetail.employeeWorkingHistories)}" id="workingPlaceHistoryDetails">
-            <div class="col-sm-12 flex-column ">
-                <div class="header ">
-                    <h3><strong><span id="captionEmployeeName" data-th-text="${employeeDetail.title.title} +${' '} +${employeeDetail.name}"></span>'s Working History</strong></h3>
-                </div>
-                <table class="table table-striped table-inverse table-responsive">
-                    <thead class="thead-inverse">
-                    <tr>
-                        <th>Working Place Name</th>
-                        <th>From</th>
-                        <th>To</th>
-                        <th>Duration</th>
-                        <th>Transfer Reason</th>
-                        <th>Remark</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr data-th-each="workingPlaceHistory : ${employeeDetail.employeeWorkingHistories}" class="text-left text-light">
-                        <td data-th-text="${workingPlaceHistory.workingPlace.name}" scope="row"></td>
-                        <td data-th-text="${workingPlaceHistory.from_place}"></td>
-                        <td data-th-text="${workingPlaceHistory.to_place}"></td>
-                        <td data-th-text="${workingPlaceHistory.workingDuration}"></td>
-                        <td data-th-text="${workingPlaceHistory.workingPlaceChangeReason.workingPlaceChangeReason}"></td>
-                        <td data-th-text="${workingPlaceHistory.remark}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <!--Detection team details show-->
 
-        <!--his contribution for petition details-->
     </div>
     <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
         <a href="/employee">
-            <button class="btn btn-success" type="button" tabindex="10">
-                <i class="fa fa-backward " style="font-size: 20px"></i>&nbsp; &nbsp;Back
+            <button class="btn btn-outline-secondary" type="button" tabindex="10">
+                <i class="fa fa-arrow-circle-left " style="font-size: 20px"></i>&nbsp; &nbsp;Back
             </button>
         </a>
     </div>
