--- a/src/main/resources/static/css/myCss.css
+++ b/src/main/resources/static/css/myCss.css
@@ -272,27 +272,27 @@
 
 /*!*remove lab test from selected table - end*!*/
 
-/*!*form  - start*!*/
-/*label {*/
-/*   font-size: 18px !important;*/
-/*    font-max-size: 22px;*/
-/*    font-min-size: 12px;*/
-/*    font-weight: bold;*/
-/*    color: black;*/
-/*}*/
+/*!*------------------form  - start----------------------*!*/
+label {
+   font-size: 18px !important;
+    font-max-size: 22px;
+    font-min-size: 12px;
+    font-weight: bold;
+    color: #2c3e50;
+}
 
-/*input {*/
-/*    font-size: 18px !important;*/
-/*}*/
+input {
+    font-size: 18px !important;
+}
 
-/*.display_detail {*/
-/*    font-size: 18px !important;*/
-/*    font-max-size: 20px;*/
-/*    font-min-size: 12px;*/
-/*    font-weight: bold;*/
-/*    color: black;*/
-/*    text-align: left;*/
-/*}*/
+.display_detail {
+    font-size: 18px !important;
+    font-max-size: 20px;
+    font-min-size: 12px;
+    font-weight: bold;
+    color: black;
+    text-align: left;
+}
 
 
 
@@ -315,7 +315,7 @@
     border-radius: 15px;
 }
 
-/*form - end*/
+/*-------------------------form - end---------------------------------*/
 
 /*Table show and hide - start*/
 .display {
