--- a/src/main/resources/static/css/theme.css
+++ b/src/main/resources/static/css/theme.css
@@ -1,45 +1,4 @@
-/*------------------------------------------------------------------
-[Master Stylesheet]
 
-Project:  CoolAdmin
-Version:	1.0
-Last change:	08/10/2018 [Add Define a table of contents Link]
-Assigned to:	Hau Nguyen
-Primary use:	Open Source
--------------------------------------------------------------------*/
-/*------------------------------------------------------------------
-[LAYOUT]
-
-* body
-    + Header / header
-	+ Page Content / .page-content .name-page
-        + Section Layouts / section .name-section
-        ...
-	+ Footer / footer
-
--------------------------------------------------------------------*/
-/*------------------------------------------------------------------
-# [Color codes]
-
-# Text Color (text): #666666
-# Text Color Deep (Text, title): #333333
-
-------------------------------------------------------------------*/
-/*------------------------------------------------------------------
-[Typography]
-
-Notes:	decreasing heading by 0.4em with every subsequent heading level
--------------------------------------------------------------------*/
-/*-----------------------------------------------------*/
-/*                   SETTINGS                          */
-/*-----------------------------------------------------*/
-/*-----------------------------------------------------*/
-/*                   TOOLS                             */
-/*-----------------------------------------------------*/
-/*-----------------------------------------------------*/
-/*                   GENERIC                           */
-/*-----------------------------------------------------*/
-/* ----- Normalize ----- */
 * {
     margin: 0;
     padding: 0;
@@ -155,7 +114,7 @@ h4 strong{
 /*    border-radius: 3px;*/
 /*}*/
 
-/* ----- Typography ----- */
+/* ----- Body ----- */
 body {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -169,49 +128,7 @@ body {
 
 }
 
-/*h1,*/
-/*h2,*/
-/*h3,*/
-/*h4,*/
-/*h5,*/
-/*h6 {*/
-/*    color: #333333;*/
-/*    font-weight: 700;*/
-/*    margin: 0;*/
-/*    line-height: 1.2;*/
-/*}*/
 
-/*h1 {*/
-/*    font-size: 36px;*/
-/*}*/
-
-/*h2 {*/
-/*    font-size: 30px;*/
-/*}*/
-
-/*h3 {*/
-/*    font-size: 24px;*/
-/*}*/
-
-/*h4 f{*/
-/*    font-size: 18px;*/
-/*}*/
-
-/*h5 {*/
-/*    font-size: 15px;*/
-/*}*/
-
-/*h6 {*/
-/*    font-size: 13px;*/
-/*}*/
-
-/*blockquote {*/
-/*    margin: 0;*/
-/*}*/
-
-/*strong {*/
-/*    font-weight: 700;*/
-/*}*/
 
 /*-----------------------------------------------------*/
 /*                   ELEMENTS                          */
@@ -715,179 +632,179 @@ section {
     }
 }
 
-/* ----- Form ----- */
-.form-header {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-}
+/*!* ----- Form ----- *!*/
+/*.form-header {*/
+/*    display: -webkit-box;*/
+/*    display: -webkit-flex;*/
+/*    display: -moz-box;*/
+/*    display: -ms-flexbox;*/
+/*    display: flex;*/
+/*}*/
 
-@media (max-width: 991px) {
-    .form-header {
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-        -moz-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-    }
-}
+/*@media (max-width: 991px) {*/
+/*    .form-header {*/
+/*        -webkit-box-pack: center;*/
+/*        -webkit-justify-content: center;*/
+/*        -moz-box-pack: center;*/
+/*        -ms-flex-pack: center;*/
+/*        justify-content: center;*/
+/*    }*/
+/*}*/
 
-.form-header2 .au-btn--submit {
-    border: none;
-    line-height: 45px;
-}
+/*.form-header2 .au-btn--submit {*/
+/*    border: none;*/
+/*    line-height: 45px;*/
+/*}*/
 
-.form-header2 .au-input {
-    border-color: rgba(255, 255, 255, 0.2);
-    background: rgba(255, 255, 255, 0.051);
-    color: #999;
-}
+/*.form-header2 .au-input {*/
+/*    border-color: rgba(255, 255, 255, 0.2);*/
+/*    background: rgba(255, 255, 255, 0.051);*/
+/*    color: #999;*/
+/*}*/
 
-.form-header2 .au-input::-webkit-input-placeholder {
-    /* WebKit, Blink, Edge */
-    color: #999;
-}
+/*.form-header2 .au-input::-webkit-input-placeholder {*/
+/*    !* WebKit, Blink, Edge *!*/
+/*    color: #999;*/
+/*}*/
 
-.form-header2 .au-input:-moz-placeholder {
-    /* Mozilla Firefox 4 to 18 */
-    color: #999;
-    opacity: 1;
-}
+/*.form-header2 .au-input:-moz-placeholder {*/
+/*    !* Mozilla Firefox 4 to 18 *!*/
+/*    color: #999;*/
+/*    opacity: 1;*/
+/*}*/
 
-.form-header2 .au-input::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
-    color: #999;
-    opacity: 1;
-}
+/*.form-header2 .au-input::-moz-placeholder {*/
+/*    !* Mozilla Firefox 19+ *!*/
+/*    color: #999;*/
+/*    opacity: 1;*/
+/*}*/
 
-.form-header2 .au-input:-ms-input-placeholder {
-    /* Internet Explorer 10-11 */
-    color: #999;
-}
+/*.form-header2 .au-input:-ms-input-placeholder {*/
+/*    !* Internet Explorer 10-11 *!*/
+/*    color: #999;*/
+/*}*/
 
-.form-header2 .au-input:-ms-input-placeholder {
-    /* Microsoft Edge */
-    color: #999;
-}
+/*.form-header2 .au-input:-ms-input-placeholder {*/
+/*    !* Microsoft Edge *!*/
+/*    color: #999;*/
+/*}*/
 
 /* ----- Input ----- */
-.au-input {
-    line-height: 43px;
-    border: 1px solid #e5e5e5;
-    font-size: 14px;
-    color: #666;
-    padding: 0 17px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+/*.au-input {*/
+/*    line-height: 43px;*/
+/*    border: 1px solid #e5e5e5;*/
+/*    font-size: 14px;*/
+/*    color: #666;*/
+/*    padding: 0 17px;*/
+/*    -webkit-border-radius: 3px;*/
+/*    -moz-border-radius: 3px;*/
+/*    border-radius: 3px;*/
+/*    -webkit-transition: all 0.5s ease;*/
+/*    -o-transition: all 0.5s ease;*/
+/*    -moz-transition: all 0.5s ease;*/
+/*    transition: all 0.5s ease;*/
+/*}*/
 
-.au-input--style2 {
-    color: #808080;
-    line-height: 43px;
-    border: 1px solid #e5e5e5;
-    font-size: 14px;
-    padding: 0 17px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
+/*.au-input--style2 {*/
+/*    color: #808080;*/
+/*    line-height: 43px;*/
+/*    border: 1px solid #e5e5e5;*/
+/*    font-size: 14px;*/
+/*    padding: 0 17px;*/
+/*    -webkit-border-radius: 3px;*/
+/*    -moz-border-radius: 3px;*/
+/*    border-radius: 3px;*/
+/*    -webkit-transition: all 0.5s ease;*/
+/*    -o-transition: all 0.5s ease;*/
+/*    -moz-transition: all 0.5s ease;*/
+/*    transition: all 0.5s ease;*/
+/*}*/
 
-.au-input--full {
-    width: 100%;
-}
+/*.au-input--full {*/
+/*    width: 100%;*/
+/*}*/
 
-.au-input--h65 {
-    line-height: 63px;
-    font-size: 16px;
-    color: #808080;
-}
+/*.au-input--h65 {*/
+/*    line-height: 63px;*/
+/*    font-size: 16px;*/
+/*    color: #808080;*/
+/*}*/
 
-.au-input--w300 {
-    min-width: 300px;
-}
+/*.au-input--w300 {*/
+/*    min-width: 300px;*/
+/*}*/
 
-.au-input--w435 {
-    min-width: 435px;
-}
+/*.au-input--w435 {*/
+/*    min-width: 435px;*/
+/*}*/
 
-@media (max-width: 767px) {
-    .au-input--w435 {
-        min-width: 230px;
-    }
-}
+/*@media (max-width: 767px) {*/
+/*    .au-input--w435 {*/
+/*        min-width: 230px;*/
+/*    }*/
+/*}*/
 
-.au-form-icon {
-    position: relative;
-}
+/*.au-form-icon {*/
+/*    position: relative;*/
+/*}*/
 
-.au-form-icon .au-input {
-    padding-right: 80px;
-}
+/*.au-form-icon .au-input {*/
+/*    padding-right: 80px;*/
+/*}*/
 
-.au-form-icon--sm {
-    position: relative;
-}
+/*.au-form-icon--sm {*/
+/*    position: relative;*/
+/*}*/
 
-.au-form-icon--sm .au-input {
-    padding-right: 43px;
-}
+/*.au-form-icon--sm .au-input {*/
+/*    padding-right: 43px;*/
+/*}*/
 
-.au-input-icon {
-    position: absolute;
-    top: 1px;
-    right: 12px;
-    width: 63px;
-    height: 63px;
-    line-height: 63px;
-    text-align: center;
-    display: block;
-}
+/*.au-input-icon {*/
+/*    position: absolute;*/
+/*    top: 1px;*/
+/*    right: 12px;*/
+/*    width: 63px;*/
+/*    height: 63px;*/
+/*    line-height: 63px;*/
+/*    text-align: center;*/
+/*    display: block;*/
+/*}*/
 
-.au-input-icon i {
-    font-size: 30px;
-    color: #808080;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
+/*.au-input-icon i {*/
+/*    font-size: 30px;*/
+/*    color: #808080;*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    -webkit-transform: translate(-50%, -50%);*/
+/*    -moz-transform: translate(-50%, -50%);*/
+/*    -ms-transform: translate(-50%, -50%);*/
+/*    -o-transform: translate(-50%, -50%);*/
+/*    transform: translate(-50%, -50%);*/
+/*}*/
 
-.au-input--xl {
-    min-width: 935px;
-}
+/*.au-input--xl {*/
+/*    min-width: 935px;*/
+/*}*/
 
-@media (max-width: 1600px) {
-    .au-input--xl {
-        min-width: 350px;
-    }
-}
+/*@media (max-width: 1600px) {*/
+/*    .au-input--xl {*/
+/*        min-width: 350px;*/
+/*    }*/
+/*}*/
 
-@media (max-width: 991px) {
-    .au-input--xl {
-        min-width: 350px;
-    }
-}
+/*@media (max-width: 991px) {*/
+/*    .au-input--xl {*/
+/*        min-width: 350px;*/
+/*    }*/
+/*}*/
 
-@media (max-width: 767px) {
-    .au-input--xl {
-        min-width: 150px;
-    }
-}
+/*@media (max-width: 767px) {*/
+/*    .au-input--xl {*/
+/*        min-width: 150px;*/
+/*    }*/
+/*}*/
 
 .au-btn--submit {
     position: relative;
