--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -11,7 +11,7 @@
 
 
 <!--heading Area-->
-<div class="container-fluid  form-Border">
+<div class="container-fluid">
     <div class="row mt-4">
         <div class="col">
             <a href="/home" id="btnHome" class="btn btn-dark"><i class="fas fa-arrow-left"></i>
